<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share_incident"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/shareIncident" />
        <item
            android:id="@+id/nav_report_incident"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/reportIncident" />
        <item
            android:id="@+id/nav_near_incident"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nearIncident" />
        <item
            android:id="@+id/nav_all_incident"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/allIncident" />
    </group>

</menu>
