<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical"
        tools:context=".Activity.SignActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />


        <EditText
            android:id="@+id/etMail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/lastName"
            android:inputType="textCapSentences"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/phone"
            android:inputType="numberDecimal"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etBirthDate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:clickable="true"
            android:editable="false"
            android:gravity="left"
            android:hint="@string/birthDate"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etGender"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/gender"
            android:inputType="textCapSentences"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnCreateAccountWelcome"
            android:layout_width="313dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:background="@drawable/green_white_button"
            android:gravity="center"
            android:text="@string/createNewAccount"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</layout>
