<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.ChoosingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/colorGrays" />

            <Button
                android:id="@+id/btnRoadWork"
                android:layout_width="313dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/green_white_button"
                android:gravity="center"
                android:text="@string/roadWork"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
            android:id="@+id/btnAccident"
            android:layout_width="313dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/green_white_button"
            android:gravity="center"
            android:text="@string/accident"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnRobbery"
                android:layout_width="313dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_white_button"
                android:gravity="center"
                android:text="@string/robbery"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/btnMurder"
                android:layout_width="313dp"
                android:layout_height="39dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/green_white_button"
                android:gravity="center"
                android:text="@string/murder"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textAllCaps="false"/>
        </LinearLayout>
    </RelativeLayout>
</layout>
