<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_green_edittext"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvIncidentNameTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/incidentName"
            android:textColor="@color/colorGreen"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncidentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/colorGreen" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvIncidentLocationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/incidentLocation"
            android:textColor="@color/colorGreen"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncidentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/colorGreen" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvIncidentInformerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/incidentInformer"
            android:textColor="@color/colorGreen"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncidentInformers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/colorGreen" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/tvIncidentDateTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/incidentDate"
            android:textColor="@color/colorGreen"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvIncidentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text=""
            android:textColor="@color/colorGreen" />


    </LinearLayout>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/green_white_button"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />

</LinearLayout>