<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical">

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:shadowColor="@color/colorWhite"/>

        <EditText
            android:id="@+id/etMailLogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/black_green_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="313dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:background="@drawable/white_black_button"
            android:gravity="center"
            android:text="@string/loginAccount"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

    </LinearLayout>
</layout>
