<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llBorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/border_prototype_report"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvIncidentNameTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:text="@string/incidentName"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvIncidentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvIncidentLocationTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:text="@string/incidentLocation"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvIncidentLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvIncidentInformerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:text="@string/incidentInformer"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvIncidentInformers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/tvIncidentDateTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:text="@string/incidentDate"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tvIncidentDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="0.5"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivOkey"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_green_okey"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@drawable/ic_red_close"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
